# pystruct3d

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  debug.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml
bbox/: bbox.py
metrics/: volumetric_iou.py
pystruct3d/: __init__.py  testing.py
pystruct3d/annotation/: __init__.py  utils.py
pystruct3d/bbox/: __init__.py  bbox.py  point_bbox_metrics.py  test.py  test_2.py  utils.py
pystruct3d/io/: __init__.py  cv4aec.py  e57.py  las.py  readers.py
pystruct3d/metrics/: __init__.py  bbox_iou.py  centroid_deviation.py  generate_example.py  hungarian_algorithm.py  munkres.py  point_metric.py  volumetric_iou.py  voxel_iou.py  voxelization_limits.py
pystruct3d/preprocessing/: __init__.py  alignment.py  crop.py  labels.py  pca.py  test_alignment.py  voxel.py
pystruct3d/ransac/: fit_line.py
pystruct3d/utils/: las_utils.py
pystruct3d/visualization/: __init__.py  visualization.py
scripts/: array_row_search.py  benchmark.py  evaluate_cv4aec.py  visualize_alignment.py  visualize_bbox.py
tests/: __init__.py  conftest.py  test_bbox.py  test_bbox_iou.py  test_preprocessing.py
