[build-system]
requires      = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name            = "pystruct3d"
description     = "Open-source Python library for bounding box fitting, evaluation metrics, and visualization in scan-to-BIM workflows"
dynamic         = ["version"]
readme          = "README.md"
requires-python = ">=3.10,<3.13"
license         = { file = "LICENSE" }

authors = [
    { name = "Mahdi Chamseddine", email = "mahdi.chamseddine@dfki.de" },
    { name = "Fabian Kaufmann", email = "fabian.kaufmann@rptu.de" },
]

dependencies = [
    "laspy[lazrs,laszip]>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "open3d>=0.18.0",
    "pye57>=0.4.0",
    "scipy>=1.11.0",
    "tqdm>=4.60.0",
]

[dependency-groups]
dev = ["pytest>=9.0.3"]

[tool.setuptools.packages.find]
include = ["pystruct3d*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude      = [".eggs", ".git", ".venv"]
line-length  = 88                         # same as black
indent-width = 4

[tool.ruff.format]
quote-style = "double"
preview     = true

[tool.ruff.lint]
select = ["E", "F", "B", "C4", "SIM", "UP", "RUF", "PERF", "FURB", "PLR"]
ignore = [
    "E501",    # line too long — formatter enforces line-length
    "INP001",  # implicit namespace package — scripts/ intentionally has no __init__.py
    "PLR0124", # self-comparison — intentional NaN checks (x != x idiom)
    "PLR0912", # too many branches — large existing UI/script functions
    "PLR0913", # too many arguments — existing pipeline/UI functions
    "PLR0915", # too many statements — large existing UI/script functions
    "PLR2004", # magic-value comparisons — numeric constants throughout scientific code
    "RUF001",  # ambiguous Unicode in strings — math notation (×, −, …)
    "RUF002",  # ambiguous Unicode in docstrings — math notation
    "RUF003",  # ambiguous Unicode in comments — math notation
]
