[build-system]
requires      = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name            = "pystruct3d"
description     = "Open-source Python library for bounding box fitting, evaluation metrics, and visualization in scan-to-BIM workflows"
dynamic         = ["version"]
readme          = "README.md"
requires-python = ">=3.10,<3.13"
license         = { file = "LICENSE" }

authors = [
    { name = "Mahdi Chamseddine", email = "mahdi.chamseddine@dfki.de" },
    { name = "Fabian Kaufmann", email = "fabian.kaufmann@rptu.de" },
]

dependencies = [
    "laspy[lazrs,laszip]>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "open3d>=0.18.0",
    "pye57>=0.4.0",
    "scipy>=1.11.0",
    "tqdm>=4.60.0",
]

[dependency-groups]
dev = [
    "pdoc>=14.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.0",
    "ty>=0.0.44",
]

[tool.setuptools.packages.find]
include = ["pystruct3d*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude      = [".eggs", ".git", ".venv"]
line-length  = 88                         # same as black
indent-width = 4

[tool.ruff.format]
quote-style = "double"
preview     = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Formatter owns these
    "E501",   # line too long — formatter enforces line-length
    "COM812", # trailing comma — formatter manages

    # Docstring style — too prescriptive for scientific code; revisit separately
    "D",

    # Exception message style — too prescriptive for scientific code
    "TRY003",
    "EM101",
    "EM102",

    # Pylint
    "PLR0913", # too many arguments — pipeline/scientific functions
    "PLR2004", # magic value comparisons — numeric constants in scientific code

    # Ruff Unicode — math notation (×, −, σ, …)
    "RUF001",
    "RUF002",
    "RUF003",

    # Naming — rotation matrix R is conventional in linear algebra
    "N806",

    # Import placement — intentional lazy imports for heavy optional deps (open3d, pye57)
    "PLC0415",

    # TODO annotations — opinionated formatting requirements
    "TD002",
    "TD003",
    "FIX002",
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201", "PLW0108", "C901", "EXE001", "ANN"]
"tests/*"   = ["S101", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"
